<resources>
    <string name="app_name">Screencast</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_undo">Undo</string>
    <string name="action_share">Share</string>
    <string name="action_play">Play</string>
    <string name="action_delete">Delete</string>
    <string name="action_stop">Stop</string>
    <string name="action_discard">Discard</string>
    <string name="action_video_configuration">Video Configuration</string>
    <string name="action_apply">Apply</string>
    <string name="action_cancel">Cancel</string>

    <string name="button_grant_permission">Grant permission</string>

    <string name="notification_recording_title">Screencast</string>
    <string name="notification_recording_content">Screencast is recording…</string>
    <string name="notification_finished_title">Record finished</string>
    <string name="notification_finished_content">Video file saved.</string>

    <string name="label_bitrate">Bitrate</string>
    <string name="label_encoder">Encoder</string>
    <string name="label_output_format">Output Format</string>
    <string name="label_fps">FPS</string>
    <string name="label_microphone">Audio Recording</string>

    <string name="title_dialog_share">Share with</string>

    <string name="title_toolbar_video_configuration">Video Configuration</string>

    <string name="hint_must_enable_external_storage_access">You must enable external storage access in order to display recorded videos.\nHowever, your screencasts will also appear in your gallery app.</string>
    <string name="hint_audio_recording_on">Your microphone will be used to record audio.</string>
    <string name="hint_audio_recording_off">The record will contain no audio.</string>
    <string name="hint_audio_recording">Enables audio for recording.</string>

    <string name="snackbar_recording_finished">Recording finished</string>
    <string name="snackbar_cannot_initiate_video">Cannot initiate video!</string>
    <string name="snackbak_file_deleted">File deleted</string>
    <string name="snackbar_permission_denied">Screen Cast Permission Denied</string>
    <string name="snackbar_cannot_list_videos">Cannot list videos because of lacking permissions.</string>

</resources>
