<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginLeft="8dp"
                                    android:layout_marginRight="8dp"
                                    android:layout_marginTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/videocard_thumbnail"
            android:layout_width="70dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:src="@drawable/screenshot_debug"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/videocard_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Screencast_15_12_11_12_12_12"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/videocard_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Date: 19.12.2015 (23:56)"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="4dp"/>

            <TextView
                android:id="@+id/videocard_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Length: 14:05"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="4dp"/>

            <TextView
                android:id="@+id/videocard_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="start">

        <Button
            android:id="@+id/btn_share"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:text="@string/action_share"/>

        <Button
            android:id="@+id/btn_play"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_play"
            android:paddingEnd="8dp"/>

        <Button
            android:id="@+id/btn_delete"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_delete"
            android:paddingEnd="8dp"/>

    </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>